--- a/index.html
+++ b/index.html
@@ -86,6 +86,43 @@
       </div>
     </div>
   </header>
+  <div class="shops">
+    <div class="shops__inner container card">
+      <h3 class="shops__title">Магазины</h3>
+      <ul class="shops__grid grid">
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок</h4>
+          </a>
+        </li>
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок в четыре слова</h4>
+          </a>
+        </li>
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок</h4>
+          </a>
+        </li>
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок</h4>
+          </a>
+        </li>
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок</h4>
+          </a>
+        </li>
+        <li class="shops__grid-item">
+          <a href="/" class="shops__grid-link">
+            <h4 class="shops__grid-title">Заголовок в четыре слова</h4>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
   <dialog class="mobile-overlay tablet-visible" id="mobileOverlay">
     <form action="dialog" class="mobile-overlay__close-button-wrapper">
       <button class="mobile-overlay__close-button" type="submit"><span class="visually-hidden">Закрыть меню
