База для блока магазинов

--- a/index.html
+++ b/index.html
@@ -86,41 +86,19 @@
       </div>
     </div>
   </header>
-  <div class="shops">
-    <div class="shops__inner container card">
+  <div class="shops card">
+    <div class="shops__inner container">
       <h3 class="shops__title">Магазины</h3>
-      <ul class="shops__grid grid">
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок</h4>
-          </a>
-        </li>
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок в четыре слова</h4>
-          </a>
-        </li>
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок</h4>
-          </a>
-        </li>
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок</h4>
-          </a>
-        </li>
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок</h4>
-          </a>
-        </li>
-        <li class="shops__grid-item">
-          <a href="/" class="shops__grid-link">
-            <h4 class="shops__grid-title">Заголовок в четыре слова</h4>
-          </a>
-        </li>
-      </ul>
+    <div class="shops__grid grid">
+        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4>
+        </a>
+        <a href="" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок в четыре слова</h4>
+        </a>
+        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
+        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
+        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
+        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок в четыре слова</h4></a>
+    </div>
     </div>
   </div>
   <dialog class="mobile-overlay tablet-visible" id="mobileOverlay">
