Стили для блока магазинов

--- a/index.html
+++ b/index.html
@@ -14,68 +14,68 @@
       <img src="public/images/backgrounds/bg-2.png" alt="" class="header__image">
       <div class="header__container container">
         <nav class="header__menu menu">
-          <a href="/" class="header__menu-logo-black logo tablet-hidden"><img src="public/images/logo/logo-small.svg" alt="Атмосфера Дома"
+          <a href="" class="header__menu-logo-black logo tablet-hidden"><img src="public/images/logo/logo-small.svg" alt="Атмосфера Дома"
               class="header__menu-image"></a>
-          <a href="/" class="header__menu-logo-white logo tablet-visible"><img src="public/images/logo/logo-small-white.svg" alt="Атмосфера Дома"
+          <a href="" class="header__menu-logo-white logo tablet-visible"><img src="public/images/logo/logo-small-white.svg" alt="Атмосфера Дома"
             class="header__menu-image"></a>
           <ul class="header__menu-list list tablet-hidden">
             <li class="header__menu-item">
-              <a href="/" class="header__menu-link">
+              <a href="" class="header__menu-link">
                 <p>О нас</p>
               </a>
             </li>
             <li class="header__menu-item">
-              <a href="/" class="header__menu-link">
+              <a href="" class="header__menu-link">
                 <p>Магазины</p>
               </a>
             </li>
             <li class="header__menu-item">
-              <a href="/" class="header__menu-link">
+              <a href="" class="header__menu-link">
                 <p>Арендаторам</p>
               </a>
             </li>
             <li class="header__menu-item">
-              <a href="/" class="header__menu-link">
+              <a href="" class="header__menu-link">
                 <p>Новости и акции</p>
               </a>
             </li>
             <li class="header__menu-item">
-              <a href="/" class="header__menu-link">
+              <a href="" class="header__menu-link">
                 <p>Контакты</p>
               </a>
             </li>
           </ul>
-          <a href="/" class="header__menu-location mobile-small-hidden">Красноярск, ул. А. Вавилова 1, ст.39</a>
+          <a href="" class="header__menu-location mobile-small-hidden">Красноярск, ул. А. Вавилова 1, ст.39</a>
           <button class="header__menu-burger-button burger-button tablet-visible"
             onclick="mobileOverlay.showModal()"><span class="visually-hidden">Открыть меню навигации</span></button>
         </nav>
-        <a href="/" class="header__logo">
+        <a href="" class="header__logo">
           <span class="header__logo-title">выгодные покупки и решения</span>
           <img class="header__logo-image" src="/images/logo/logo-big.svg" alt="Атмосфера Дома" width="806" height="297">
         </a>
         <div class="header__info">
           <ul class="header__info-list list">
             <li class="header__info-item card card--small">
-              <a href="/">
+              <a href="">
                 <h2>45 тыс. м²</h2>
                 <span>общая площадь гипермаркета</span>
               </a>
             </li>
             <li class="header__info-item card card--small">
-              <a href="/">
+              <a href="">
                 <h2>1.5 тыс.</h2>
                 <span>парковочных мест</span>
               </a>
             </li>
             <li class="header__info-item card card--small">
-              <a href="/">
+              <a href="">
                 <h2>2</h2>
                 <span>этажа магазинов
                   на любой вкус</span>
               </a>
             </li>
             <li class="header__info-item card card--small">
-              <a href="/">
+              <a href="">
                 <h2>190</h2>
                 <span>магазинов с
                   широким выбором</span>
@@ -87,17 +87,17 @@
     </div>
   </header>
   <div class="shops card">
-    <div class="shops__inner container">
+    <div class="shops__inner container list">
       <h3 class="shops__title">Магазины</h3>
     <div class="shops__grid grid">
-        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок</h4>
         </a>
-        <a href="" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок в четыре слова</h4>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок в четыре слова</h4>
         </a>
-        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
-        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
-        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок</h4></a>
-        <a href="/" class="shops__grid-item shops__grid-card card card--small"><h4>Заголовок в четыре слова</h4></a>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок</h4></a>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок</h4></a>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок</h4></a>
+        <a href="" class="shops__grid-item shops__grid-card card card--small list"><h4 class="shops__grid-item-title card card--small">Заголовок в четыре слова</h4></a>
     </div>
     </div>
   </div>
@@ -108,19 +108,19 @@
     </form>
     <div class="mobile-overlay__body">
       <ul class="mobile-overlay__list">
-        <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">
+        <li class="mobile-overlay__item"><a href="" class="mobile-overlay__link">
             <p>О нас</p>
           </a></li>
-        <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">
+        <li class="mobile-overlay__item"><a href="" class="mobile-overlay__link">
             <p>Магзины</p>
           </a></li>
-        <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">
+        <li class="mobile-overlay__item"><a href="" class="mobile-overlay__link">
             <p>Арендаторам</p>
           </a></li>
-        <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">
+        <li class="mobile-overlay__item"><a href="" class="mobile-overlay__link">
             <p>Новости и акции</p>
           </a></li>
-        <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">
+        <li class="mobile-overlay__item"><a href="" class="mobile-overlay__link">
             <p>Контакты</p>
           </a></li>
       </ul>
